# TrickGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: TrickAssert.h  TrickBase.h  TrickConsole.h  TrickCore.h  TrickDefinitions.h  TrickDefinitionsWin.h  TrickDefinitions_linux.h  TrickGLInterface.h  TrickLimits.h  TrickPrimitiveTypes.h  TrickWindow.h
include/OpenGL/: glcorearb.h
source/: TrickAssert.c  TrickConsole_win.c  TrickGLInterface_win.c  TrickWindow_win.c  Trick_win.h
